--- a/EasyMathamaticalOperationsWebApi/MathOperations.WebApi.csproj
+++ b/EasyMathamaticalOperationsWebApi/MathOperations.WebApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Authors>MathOperations.WebApi</Authors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +16,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.5" />
-    <PackageReference Include="Postman.Runner" Version="0.2.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
